@@ -261,6 +261,11 @@ Summary of important user-visible changes for version 3.8:
     "relax" option has been replaced by the "rtest" option.  The numeric
     values of error codes and of some options have also changed.
 
+ ** The kurtosis function has changed definition to be compatible with 
+    Matlab.  It now returns the base kurtosis instead of the "excess kurtosis".
+    The old behavior can be had by changing scripts to normalize with -3.
+               "excess kurtosis" = kurtosis (x) - 3
+
  ** The default name of the Octave crash dump file is now 
     "octave-workspace" instead of "octave-core".
 
